--- a/monthly_stats/ebreif_tufte.Rmd
+++ b/monthly_stats/ebreif_tufte.Rmd
@@ -73,7 +73,7 @@ That downloaded all the data with a 1971 base year. The first data is for Januar
 
 For the sparklines in ggplot2 I need to select the relevant series and transform them into a data.frame.
 
-```{r unem_sparklines, echo=FALSE, message=FALSE, fig.cap = "Unemployment (ILO definition) and the Unemployment rate", fig.width=4, fig.height=2}
+```{r unem_sparklines, echo=FALSE, message=FALSE, fig.cap = "Unemployment (ILO definition) and the Unemployment rate", fig.width=5, fig.height=2}
 unem2 <- merge.zoo(mgsc, mgsx)
 names(unem2) <- c("ILO.unemployment", "ILO unemployment rate")
 unem_df <- fortify(tail(unem2,25), melt=TRUE)
@@ -145,7 +145,7 @@ mgsx.dygraph
 
 ##Chart 15 Employment (number)
 
-```{r emp_sparklines, echo=FALSE, message=FALSE, fig.cap = "Employment, Female employment and Male employment", fig.width=4, fig.height=2}
+```{r emp_sparklines, echo=FALSE, message=FALSE, fig.cap = "Employment, Female employment and Male employment", fig.width=5, fig.height=2}
 unem2 <- merge.zoo(mgrz, mgsb, mgsa)
 names(unem2) <- c("Employment", "Female", "Male")
 unem_df <- fortify(tail(unem2,25), melt=TRUE)
@@ -184,7 +184,7 @@ Male employment is `r I(format(tail(mgsa,1)*1000,big.mark=","))`, *up* `r I(form
 
 ##Chart 16 Employment rate
 
-```{r emprate_sparklines, echo=FALSE, message=FALSE, fig.cap = "Employment rates, All, Female and Male", fig.width=4, fig.height=2}
+```{r emprate_sparklines, echo=FALSE, message=FALSE, fig.cap = "Employment rates, All, Female and Male", fig.width=5, fig.height=2}
 unem2 <- merge.zoo(lf24, lf25, mgsv)
 names(unem2) <- c("Employment rate", "Female", "Male")
 unem_df <- fortify(tail(unem2,25), melt=TRUE)
@@ -231,3 +231,69 @@ emprates.dygraph <- dygraph(as.xts(emprates,
 saveWidget(emprates.dygraph, "Employment_rate_dygraph.html", selfcontained = TRUE)
 emprates.dygraph
 ```
+##Claimant Count
+
+The claimant count figures now include out of work Universal Credit bcjd. This is a temporary measure until the Universal Credit figures can distinguish between unemployed-like claims (full conditionality) and others (wor preparation and no conditionality). 
+
+```{r download_cla01, echo=FALSE}
+bcjd <- fromJSON("http://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/outofworkbenefits/timeseries/bcjd/data")
+bcjd <- zooreg(as.numeric(bcjd$months$value), start=c(1971,1), frequency = 12)
+bcje <- fromJSON("http://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/outofworkbenefits/timeseries/bcje/data")
+bcje <- zooreg(as.numeric(bcje$months$value), start=c(1971,1), frequency = 12)
+cla01 <- merge.zoo(bcjd, bcje)
+names(cla01) <- c("Claimant.count", "Claimant.count.rate")
+```
+
+The number of *claimant unemployed* is 
+`r I(format(tail(bcjd,1)[,5]*1000,big.mark=",")) `, 
+*down* 
+`r I(format(round(diff(tail(bcjd,2)[,5]*1000, lag=1),1), big.mark=",")) `
+on last month, and the *claimant rate* is 
+`r I(round(tail(bcje,1)[,6],1)) `%. 
+
+ 
+
+```{r claimantcount_sparklines, echo=FALSE, message=FALSE, fig.cap = "Claimant Count, number and rate (of economically active)", fig.width=5, fig.height=2}
+unem_df <- fortify(tail(cla01,25), melt=TRUE)
+mins <- group_by(unem_df, Series) %>% slice(which.min(Value))
+maxs <- group_by(unem_df, Series) %>% slice(which.max(Value))
+ends <- group_by(unem_df, Series) %>% filter(Index == max(Index))
+quarts <- unem_df %>% group_by(Series) %>%
+  summarize(quart1 = quantile(Value, 0.25),
+            quart2 = quantile(Value, 0.75)) %>%
+  right_join(unem_df)
+p <- ggplot(unem_df, aes(x=Index, y=Value)) + 
+  facet_grid(Series ~ ., scales = "free_y") + 
+  geom_ribbon(data = quarts, aes(ymin = quart1, max = quart2), fill = 'grey90') +
+  geom_line(size=0.3) +
+  geom_point(data = mins, col = 'red') +
+  geom_point(data = maxs, col = 'blue') +
+  geom_text(data = mins, aes(label = Value), vjust = -1, size=2) +
+  geom_text(data = maxs, aes(label = Value), vjust = 2.5, size=2) +
+  geom_text(data = ends, aes(label = Value), hjust = 0, nudge_x = 0.01, size=2) +
+  geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=2) +
+  expand_limits(x = max(unem_df$Index) + (0.15 * (max(unem_df$Index) - min(unem_df$Index)))) +
+#  scale_x_continuous(breaks = seq(2013.917, 2015.917, 4)) +
+  scale_y_continuous(expand = c(0.1, 0)) +
+  theme_tufte(base_size = 8) +
+  theme(axis.title=element_blank(), axis.text.y = element_blank(), 
+        axis.ticks = element_blank(), strip.text = element_blank())
+print(p)
+```
+The Jobseeker's Allowance and Universal Credit claimant acount fell by 
+`r I(format(round(diff(tail(bcjd,2)[,3]*1000, lag=1),1), big.mark=",")) `
+in October, 
+taking the total to 
+`r I(format(tail(bcjd,1)[,3]*1000,big.mark=","))`.
+
+```{r claimant_count_dygraph, echo=FALSE, fig.cap="Claimant count (JSA + UC)", fig.width=7, fig.height=3}
+FUNC_JSFormatNumber <- "function(x) {return x.toString().replace(/(\\d)(?=(\\d{3})+(?!\\d))/g, '$1,')}"
+
+claimant.dygraph <- dygraph(as.xts(cla01[,1], 
+                        as.yearmon(index(cla01)))) %>% 
+  dyRangeSelector(dateWindow = c("2014-02-01", "2016-02-01")) %>% 
+  dyAxis("y", axisLabelFormatter=JS(FUNC_JSFormatNumber), valueFormatter=JS(FUNC_JSFormatNumber))
+saveWidget(claimant.dygraph, "claimant_count_dygraph.html", selfcontained = TRUE)
+claimant.dygraph
+```
+
