--- a/monthly_stats/ebreif_tufte.Rmd
+++ b/monthly_stats/ebreif_tufte.Rmd
@@ -75,7 +75,7 @@ For the sparklines in ggplot2 I need to select the relevant series and transform
 
 ```{r unem_sparklines, echo=FALSE, message=FALSE, fig.cap = "Unemployment (ILO definition) and the Unemployment rate", fig.width=5, fig.height=2}
 unem2 <- merge.zoo(mgsc, mgsx)
-names(unem2) <- c("ILO.unemployment", "ILO unemployment rate")
+names(unem2) <- c("ILO unemployment", "ILO unemployment rate")
 unem_df <- fortify(tail(unem2,25), melt=TRUE)
 mins <- group_by(unem_df, Series) %>% slice(which.min(Value))
 maxs <- group_by(unem_df, Series) %>% slice(which.max(Value))
@@ -93,8 +93,8 @@ p <- ggplot(unem_df, aes(x=Index, y=Value)) +
   geom_text(data = mins, aes(label = Value), vjust = -1, size=2) +
   geom_text(data = maxs, aes(label = Value), vjust = 2.5, size=2) +
   geom_text(data = ends, aes(label = Value), hjust = 0, nudge_x = 0.01, size=2) +
-  geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=2) +
-  expand_limits(x = max(unem_df$Index) + (0.15 * (max(unem_df$Index) - min(unem_df$Index)))) +
+  geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=4) +
+  expand_limits(x = max(unem_df$Index) + (0.25 * (max(unem_df$Index) - min(unem_df$Index)))) +
 #  scale_x_continuous(breaks = seq(2013.917, 2015.917, 4)) +
   scale_y_continuous(expand = c(0.1, 0)) +
   theme_tufte(base_size = 8) +
@@ -147,7 +147,7 @@ mgsx.dygraph
 
 ```{r emp_sparklines, echo=FALSE, message=FALSE, fig.cap = "Employment, Female employment and Male employment", fig.width=5, fig.height=2}
 unem2 <- merge.zoo(mgrz, mgsb, mgsa)
-names(unem2) <- c("Employment", "Female", "Male")
+names(unem2) <- c("Employment", "Female employment", "Male employment")
 unem_df <- fortify(tail(unem2,25), melt=TRUE)
 mins <- group_by(unem_df, Series) %>% slice(which.min(Value))
 maxs <- group_by(unem_df, Series) %>% slice(which.max(Value))
@@ -165,8 +165,8 @@ p <- ggplot(unem_df, aes(x=Index, y=Value)) +
   geom_text(data = mins, aes(label = Value), vjust = -1, size=2) +
   geom_text(data = maxs, aes(label = Value), vjust = 2.5, size=2) +
   geom_text(data = ends, aes(label = Value), hjust = 0, nudge_x = 0.01, size=2) +
-  geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=2) +
-  expand_limits(x = max(unem_df$Index) + (0.15 * (max(unem_df$Index) - min(unem_df$Index)))) +
+geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=4) +
+  expand_limits(x = max(unem_df$Index) + (0.25 * (max(unem_df$Index) - min(unem_df$Index)))) +
 #  scale_x_continuous(breaks = seq(2013.917, 2015.917, 4)) +
   scale_y_continuous(expand = c(0.1, 0)) +
   theme_tufte(base_size = 8) +
@@ -204,9 +204,9 @@ p <- ggplot(unem_df, aes(x=Index, y=Value)) +
   geom_text(data = mins, aes(label = Value), vjust = -1, size=2) +
   geom_text(data = maxs, aes(label = Value), vjust = 2.5, size=2) +
   geom_text(data = ends, aes(label = Value), hjust = 0, nudge_x = 0.01, size=2) +
-  geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=2) +
-  expand_limits(x = max(unem_df$Index) + (0.15 * (max(unem_df$Index) - min(unem_df$Index)))) +
-#  scale_x_continuous(breaks = seq(2013.917, 2015.917, 4)) +
+geom_text(data = ends, aes(label = Series), hjust = 0, nudge_x = 0.1, size=4) +
+  expand_limits(x = max(unem_df$Index) + (0.25 * (max(unem_df$Index) - min(unem_df$Index)))) +
+  #  scale_x_continuous(breaks = seq(2013.917, 2015.917, 4)) +
   scale_y_continuous(expand = c(0.1, 0)) +
   theme_tufte(base_size = 8) +
   theme(axis.title=element_blank(), axis.text.y = element_blank(), 
